<resources>
    <string name="app_name">Sneakers Ship</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu_title">Home</string>
    <string name="cart_menu_title">Cart</string>
    <string name="search_sneakers_title">Search Sneakers</string>
    <string name="item_price">₹ %1$s</string>
    <string name="item_count">%1$s Items</string>
    <string name="sneakers">Sneakers</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="items">" Items"</string>
    <string name="no_items_in_cart">No Items in Cart</string>
    <string name="product_image">product_image</string>
    <string name="size_uk">Size (UK):</string>
    <string name="size_8">8</string>
    <string name="color">Color:</string>
    <string name="decrease_product_count">decrease_product_count</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="dismiss_dialog">dismiss dialog</string>
    <string name="remove_item_from_cart">remove item from cart</string>
    <string name="increase_product_count">increase_product_count</string>
</resources>