<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/white"
        android:contentDescription="@string/dismiss_dialog"
        android:src="@drawable/close_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImage" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImage" />

    <TextView
        android:id="@+id/productSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/size_uk"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productTitle" />

    <TextView
        android:id="@+id/productSizeVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/size_8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/productSize"
        app:layout_constraintStart_toEndOf="@+id/productSize"
        app:layout_constraintTop_toTopOf="@+id/productSize" />

    <TextView
        android:id="@+id/productColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/productColorVal"
        app:layout_constraintEnd_toStartOf="@+id/productColorVal"
        app:layout_constraintTop_toTopOf="@+id/productColorVal" />

    <TextView
        android:id="@+id/productColorVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPrice" />

    <ImageButton
        android:id="@+id/minusButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:contentDescription="@string/decrease_product_count"
        android:src="@drawable/remove_icon"
        app:layout_constraintEnd_toStartOf="@+id/quantityInput"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quantityInput" />

    <EditText
        android:id="@+id/quantityInput"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toBottomOf="@+id/productColor" />

    <ImageButton
        android:id="@+id/plusButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:contentDescription="@string/increase_product_count"
        android:src="@drawable/add_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/quantityInput"
        app:layout_constraintTop_toTopOf="@+id/quantityInput" />

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/purple"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityInput" />
</androidx.constraintlayout.widget.ConstraintLayout>
